@@ -816,6 +816,7 @@
                     Enable the line below to have remote debugging of your application on port 5005
                     <jvmArguments>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005</jvmArguments>
                     -->
+                    <jvmArguments>--illegal-access=warn</jvmArguments>
                 </configuration>
                 <executions>
                     <execution>
